--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -54,3 +54,11 @@ categories:
 
 本書はRailsの入門的な本やサイトを読んで難しいと感じた方に、そこまでの知識を埋められるように書いています。逆にいえば、ほかの入門書を読める力があれば、本書は易しすぎると感じるかもしれません。具体的には、[RailsTutorial](http://railstutorial.jp/) を読み進められるようであれば、本書はあまりお役に立てないと思います。
 
+## 記法
+★TODO
+rubyコード、コンソールコード、コンソール結果
+
+-
++
+
+Ctrl-c
