Writing the CRUD page.

--- a/_posts/2014-07-01-crud.md
+++ b/_posts/2014-07-01-crud.md
@@ -85,15 +85,43 @@ $ rails s
 
 ここからBackボタンを押すと最初の`/books`のページに戻りますが、先ほど入力したデータが表示されていることが分かるかと思います。
 
-{% image path: assets/crud/index_with_data_page.png.png, description: 入力したデータが表示される %}
+{% image path: assets/crud/index_with_data_page.png, description: 入力したデータが表示される %}
 
-さらにデータを追加したり、他のリンクもさわってみてください。
+さらにデータを追加したり、他のリンクも操作してみてください。
 
-ここで作成したアプリはCRUDの各機能、すなわち、新規作成、表示、更新、削除を有しています。以降で、1つずつその動作を説明していきます。
+ここで作成したアプリはCRUDの各機能、すなわち、新規作成、表示、更新、削除を持っています。以降で、1つずつその動作を説明していきます。
 
 ### scaffoldコマンド
 
-★ここから
+ここまで何回か出てきたrails g scaffold コマンドは新規作成、表示、更新、削除、各機能を一度に作る機能です。つまり、scaffold を使うとCRUD機能を持ったページを作成することができます。
+
+scaffold は英語で「(建築現場などの)足場」という意味です。工事中の建物のまわりに組まれた足場の上で大工さんが作業している、あの足場です。scaffold コマンドは web アプリを作り易くするための足場です。CRUD機能は web アプリでよく使う機能なので、「CRUDのこの部分にこの機能を足したらできるな」という場合に、scaffold で生成したファイル群を編集して自分のアプリを作っていくと効率良く作れます。
+
+scaffoldは次に示す新規作成、表示、更新、削除のための4つの画面と、画面のない3つの機能を生成します。
+
+{% image path: assets/crud/crud_4_pages.png, description: 4つの画面 %}
+
+それぞれの機能と対応するアクションを示したものが次の図です。※アクションとはコントローラに書いてあるpublicなメソッドのことです。基本的には、1つの画面を表示するとき、1つのアクションが実行されています。アクションについてはまた後で説明します。
+
+{% image path: assets/crud/crud_7_actions.png, description: 7つのアクション %}
+
+次は、これらのアクションと画面の対応を見てみましょう。
+
+★TODO各アクションを張る
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 ### まとめ
