--- a/_posts/2014-07-01-crud.md
+++ b/_posts/2014-07-01-crud.md
@@ -136,6 +136,19 @@ $ rails g scaffold books title:string memo:text
 
 ## index アクション
 
+最初にindexアクションについて見ていきましょう。さきほどの7つのアクションの図で示されたこの部分です。
+
+{% image path: assets/crud/index_7_actions.png, description: indexアクション %}
+
+indexアクションで表示されるページは登録されているデータの一覧です。ここでは登録されているBookの一覧表示画面になります。この画面が表示されるまでの処理を追いかけてみましょう。
+
+{% image path: assets/crud/index_view.png, description: index - 一覧画面 %}
+
+前にも出てきた「Railsアプリがリクエストを受けてレスポンスを返すまで」をindexアクションの場合で描きなおした図が以下になります。
+
+{% image path: assets/crud/index_flow.png, description: Railsアプリがリクエストを受けてレスポンスを返すまで(indexアクション) %}
+
+
 ★TODO
 
 
