--- a/_posts/2014-07-01-crud.md
+++ b/_posts/2014-07-01-crud.md
@@ -140,13 +140,33 @@ $ rails g scaffold books title:string memo:text
 
 {% image path: assets/crud/index_7_actions.png, description: indexアクション %}
 
-indexアクションで表示されるページは登録されているデータの一覧です。ここでは登録されているBookの一覧表示画面になります。この画面が表示されるまでの処理を追いかけてみましょう。
+indexアクションで表示されるページ(下の図)は登録されているデータの一覧です。ここでは登録されているBookの一覧表示画面になります。この画面が表示されるまでの処理を追いかけてみましょう。
 
 {% image path: assets/crud/index_view.png, description: index - 一覧画面 %}
 
 前にも出てきた「Railsアプリがリクエストを受けてレスポンスを返すまで」をindexアクションの場合で描きなおした図が以下になります。
 
 {% image path: assets/crud/index_flow.png, description: Railsアプリがリクエストを受けてレスポンスを返すまで(indexアクション) %}
+
+順番にRoutesから処理を追っていきます。
+
+### Routes
+
+{% image path: assets/crud/index_flow_routes.png, description: Routes %}
+
+{% image path: assets/crud/index_routes.png, description: Routes 対応表 %}
+
+Routes でリクエストから次に処理するコントローラとアクションが決まります。routes対応表を表示するために、rails server　を起動して、`http://localhost:3000/rails/info/routes`へアクセスしてみましょう。上記の「Routes対応表」図が表示されたroutesです。今回はURLが "/books", HTTPメソッドが "GET" なので、下線部が該当行です。books#index (BooksController の indexアクション) にて処理が行われることが分かります。
+
+コントローラの処理を見る前に寄り道して、Routesのコードを見てみましょう。Routesのコードは `config/routes.rb` にあります。コードは以下の図に示すようになっています。
+
+{% image path: assets/crud/index_routes_codes.png, description: Routes のコード %}
+
+Routes 対応表を作るコードは `Rails.application.routes.draw do` から `end` の間に書きます。今回表示された8行の対応表は、`resources :books` の1行によって作られます。CRUDは基本的な動作でよく利用されるため、簡単に書けるようになっているのです。
+
+それでは次の処理、コントローラへ進みましょう。
+
+### コントローラ
 
 
 ★TODO
