--- a/_posts/2014-07-01-crud.md
+++ b/_posts/2014-07-01-crud.md
@@ -168,8 +168,31 @@ Routes 対応表を作るコードは `Rails.application.routes.draw do` から 
 
 ### コントローラ
 
+Routesではリクエストから処理されるコントローラとアクションが決まると、次はコントローラへ処理が移ります。今回はBooksController の index アクションです。
+
+{% image path: assets/crud/index_flow_controller.png, description: コントローラ %}
+
+コントローラのコードを見てみましょう。ファイルは `app/controllers/books_controller.rb` です。
+
+{% image path: assets/crud/index_controller_codes.png, description: コントローラのコード %}
+
+`class BooksController < ApplicationController` から最後の行の `end` までがBooksControllerのコードです。この中の `dev index` から次の `end` までがindexアクションになります。（対応するendで字下げ（インデント）が揃えて書いてあります。）
+
+ここでやっていることは1行、`@books = Book.all` です。Book.all でBookの全データが詰まった配列を取得して、@booksインスタンス変数へ代入します。（Book.allでBookの全データがとれる仕組みについては、またあとで説明します。）
+
+@books は@から始まる変数、インスタンス変数です。「一番小さなRailsアプリつくり」のところでも説明したように、インスタンス変数 @books を使っているのは、次に処理を行うview で利用するためです。もしも、ここで変数をローカル変数 books にしてしまうと、コントローラの処理が終わったところでなくなってしまいます。
+
+また、@book と単数形ではなく @books と複数形になっているのは、Book.all で取得するデータが複数の本のデータを格納した配列だからです。（場合によっては、本のデータが1つしかない、あるいは0個である、という状況も考えられます。その場合も配列に0個、あるいは1個のデータが格納された配列が取得されます。その場合も配列として扱えることは同じです。また、その場合の変数名も複数形の @books を使うことになります。）
+
+コントローラのアクションでの処理が終わると、次はビューに処理が移ります。特に指定がない場合、app/views/コントローラ名/アクション名 のviewファイルへ処理が移ります。ここでは `app/views/books/index.html.erb` です。
+
+### ビュー
 
 ★TODO
+
+{% image path: assets/crud/index_flow_view.png, description: ビュー %}
+{% image path: assets/crud/index_view_codes.png, description: ビューのコード %}
+
 
 
 
