--- a/_posts/2014-07-01-crud.md
+++ b/_posts/2014-07-01-crud.md
@@ -10,7 +10,7 @@ date: '2014-07-01'
 categories:
 ---
 
-# CRUD基礎
+# CRUDの基礎とindexアクション
 
 Webアプリには基本となる4つの機能があります。ページの新規作成(Create)、表示(Read)、更新(Update)、削除(Destroy)です。それぞれの頭文字を取ってCRUDと呼ばれています。大きなWebアプリも、このCRUDを基礎として作られます。
 
