--- a/_posts/2014-07-01-crud.md
+++ b/_posts/2014-07-01-crud.md
@@ -4,8 +4,8 @@ unique_identifier:
  - 'http:/example.jp/bookid_in_url'
  - 'BookID'
  - 'URL'
-title: 'CRUD基礎'
-creator: 'igaiga'
+title: 'CRUDの基礎とindexアクション'
+creator: '五十嵐邦明'
 date: '2014-07-01'
 categories:
 ---
