Writing about dev env.

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -94,9 +94,91 @@ $ rails server
 {% endhighlight %}
 
 
-## 動作環境
+## 開発環境
 
-★TODO: あとで書く
+本書はRuby 2.1.2 および Rails 4.1.4 で動作確認をしています。一部、実行結果などで記述の古い部分もあります。執筆時の最新版で動作確認を進めています。
+
+本書の内容を実行する場合にはRubyおよびRailsの開発環境を作る必要があります。開発環境としては、以下のものがお勧めです。どれか1つを選んで環境を作ってみてください。
+
+### ブラウザだけで開発できるクラウド開発環境 Nitrous.IO
+
+[Nitorus.IO](https://www.nitrous.io) はブラウザだけでRailsアプリ開発を行うことができます。セットアップはNitrous.IO へ会員登録を行うだけです。有料プランもありますが、開発を行う範囲では無料プランの範囲で利用することができます。
+
+画面は3ペインのIDEになっていて、ファイルエクスプローラ、ファイルエディタ、ターミナルを利用することができます。
+
+ターミナルからはgitコマンドも利用できるので、github でソース管理することも可能です。Ruby は2.1系、Rails は4.1系と最新のものが利用できます。Nitrous.IO については [WebブラウザだけではじめるRuby/Railsプログラミング](http://qiita.com/machu/items/0ecc5699273c18fd1cd8) のページで丁寧に解説されています。
+
+`rails server` コマンドで起動したWebサーバへのアクセスはローカルに環境を作った場合と異なり、上部メニューにある Preview からPort3000を選ぶことでアクセスが可能です。
+
+注意点としては、Nitrous.IOは無料プランでは一定時間操作がない場合、アプリケーションが停止状態になります。この場合も管理コンソールからボタンを押すことで再起動が可能です。(これによって料金が発生することもありません。)
+
+もしも、Rubyのバージョンを上げたい場合は以下の手順でバージョンアップできます。(rvm を利用しているので、rvmの使い方通りでバージョンアップ可能です。)
+
+{% highlight console %}
+$ rvm get stable
+$ rvm install 2.1.2
+$ rvm use global 2.1.2 --default
+{% endhighlight %}
+
+Rails のバージョンを上げたい場合はRailsプロジェクト内の Gemfile 中の `gem 'rails', '4.1.4'` のバージョンを上げて bundle update をするか、gem update rails で環境に入っているrailsをバージョンアップすることができます。
+
+クラウドで開発できるNitrous.IO はマシンを変えても同じ環境で開発でき、ブラウザが使える環境であればどの端末からでも開発できるというメリットがあります。一方でネットに接続していないと開発できないことや、Nitrous.IOがサービスを止めてしまうと継続して使えないというデメリットもあります。
+
+### ローカルに開発環境を作る mac の場合
+
+自分のmac上に開発環境を作る方法です。
+
+開発環境つくりに必要なxcodeツールをインストールします。
+
+{% highlight console %}
+$ xcode-select --install
+{% endhighlight %}
+
+homebrew をインストールします。homebrew は mac で様々な便利なものをインストール、管理するためのツールです。
+
+{% highlight console %}
+$ ruby -e "$(curl -fsSL https://raw.github.com/Homebrew/homebrew/go/install)"
+{% endhighlight %}
+
+homebrew を使って rbenv をインストールします。rbenv はRubyをインストールして管理するための道具です。
+
+{% highlight console %}
+$ brew update
+$ brew install rbenv ruby-build
+$ echo 'eval "$(rbenv init -)"' >> ~/.bash_profile
+$ echo 'export PATH="$HOME/.rbenv/shims:$PATH"' >> ~/.bash_profile
+$ source ~/.bash_profile
+{% endhighlight %}
+
+rbenv を使って Ruby をインストールします。
+
+{% highlight console %}
+$ rbenv install 2.1.2
+{% endhighlight %}
+
+install した Ruby を利用するように設定します。
+
+{% highlight console %}
+$ rbenv global 2.1.2
+{% endhighlight %}
+
+以上でRubyのインストールは完了です。続いて、インストールした Ruby を使って Rails をインストールします。
+
+{% highlight console %}
+$ gem i rails
+{% endhighlight %}
+
+ここまでで Ruby と Rails の開発環境構築ができました。
+
+プログラムを入力する道具であるエディタは、好みのものがあればそれを利用してください。特にない場合は [Atom](https://atom.io/) をお勧めします。Atom は無料で利用することができます。(ライセンスは MIT ライセンスです。)
+
+### ローカルに開発環境を作る Windowsの場合
+
+Windowsの場合は [RailsInstaller](http://railsinstaller.org) を利用することで簡単に環境を構築することができます。しかし、最近は更新が行われておらず、Ruby1.9.3, Rails3.2 という構成になっています。Railsはコマンドプロンプトから gem update rails で最新版にバージョンアップすることが可能です。しかし、Rubyのバージョンを上げるのは簡単ではありません。
+
+最新バージョンのRubyおよびRailsを利用したい場合は、上記のNitrous.IOの利用をお勧めします。
+
+プログラムを入力する道具であるエディタは、好みのものがあればそれを利用してください。特にない場合は [Atom](https://github.com/atom/atom/blob/master/README.md#windows) をお勧めします。Atom は無料で利用することができます。(ライセンスは MIT ライセンスです。)
 
 ## この資料を終えたあとに
 
