Writing model page.

--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -43,4 +43,19 @@ end
 
 {% image path: assets/model/crud-create.png, description: この章の題材 CRUD create %}
 
+コードはこの部分です。
+
+{% image path: assets/model/create-overview.png, description: BooksController create アクション %}
+
+モデルに関する部分はここです。
+
+{% image path: assets/model/create-model.png, description: モデルを使っている箇所 %}
+
+では、モデルの仕事について見ていきましょう。
+
+## 基本的なモデルの使い方 その1 保存する
+
+以下の2つの手順を踏むだけでデータを保存することができます。
+
+
 ★TODO: ここから
