--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -53,9 +53,16 @@ end
 
 では、モデルの仕事について見ていきましょう。
 
-## 基本的なモデルの使い方 その1 保存する
+## 基本的なモデルの使い方 その1 保存
 
-以下の2つの手順を踏むだけでデータを保存することができます。
+モデルを使うとデータを保存することができます。以下の2つの手順を踏むことで保存できます。
+
+{% image path: assets/model/model-save.png, description: モデルの使い方 1 保存 %}
+
+モデル名は英語の単数形にするルールがあります。
+
+## 基本的なモデルの使い方 その2 読み込み
+
 
 
 ★TODO: ここから
