--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -57,9 +57,19 @@ end
 
 モデルを使うとデータを保存することができます。以下の2つの手順を踏むことで保存できます。
 
-{% image path: assets/model/model-save.png, description: モデルの使い方 1 保存 %}
+{% highlight ruby %}
+book = Book.new(title: "ハチミツとクローバー", memo: "美大を舞台にした青春ラブコメ")
+{% endhighlight %}
 
-モデル名は英語の単数形にするルールがあります。
+Book.new でBook モデルオブジェクトを作ります。このとき、タイトルとメモの情報を渡すことができます。
+
+尚、モデル名(モデルのクラス名)は英語の単数形にするルールがあります。ここでは Book がモデル名で、単数形になっています。
+
+{% highlight ruby %}
+book.save
+{% endhighlight %}
+
+Book モデルオブジェクトのsaveメソッドを呼ぶと保存できます。
 
 ## 基本的なモデルの使い方 その2 読み込み
 
