--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -53,7 +53,7 @@ end
 
 では、モデルの仕事について見ていきましょう。
 
-## 基本的なモデルの使い方 その1 保存
+## モデルの基本的な使い方 その1 保存
 
 モデルを使うとデータを保存することができます。以下の2つの手順を踏むことで保存できます。
 
@@ -71,8 +71,28 @@ book.save
 
 Book モデルオブジェクトのsaveメソッドを呼ぶと保存できます。
 
-## 基本的なモデルの使い方 その2 読み込み
+## モデルの基本的な使い方 その2 読み込み
+
+さきほど保存したデータを読み込んでみましょう。
+
+{% highlight ruby %}
+books = Book.all.to_a
+{% endhighlight %}
+
+Book.all で保存されているBook Model の全データを取得できます。以前に説明した一覧画面(indexアクション)でこのメソッドが使われています。
+
+`Book.all.to_a` でArrayにBookオブジェクトが詰まって返ってきます。`to_a` はArrayオブジェクトへ変換するメソッドです。
+
+## モデルの基本的な使い方 その3 検索
+
+{% highlight ruby %}
+book = Book.where(title: "ハチミツとクローバー").first
+book.title #=> "ハチミツとクローバー"
+book.memo #=> "美大を舞台にした青春ラブコメ"
+{% endhighlight %}
+
+whereメソッドを使うと検索ができます。タイトルが"ハチミツとクローバー"であるBookオブジェクトが返ります。検索結果が複数になることもあるので、firstメソッドで最初の1つを取得しています。
+
+Bookオブジェクトは titleメソッドでタイトルを、memoメソッドでメモをそれぞれ返します。
 
 
-
-★TODO: ここから
