--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -176,5 +176,82 @@ rake db:migrate で設計図をもとにDBを作ります。
 
 ## DB設計図 - migration
 
+DBの設計図をマイグレーション(migration)ファイルと呼びます。マイグレーションファイルもRails(Ruby)のコードで書かれています。
+
+では、マイグレーションファイルを見てみましょう。
+
+`db/migrate/20121122005122_create_books.rb`
+{% highlight ruby %}
+class CreateBooks < ActiveRecord::Migration
+  def change
+    create_table :books do |t|
+      t.string :title
+      t.text :memo
+
+      t.timestamps
+    end
+  end
+end
+{% endhighlight %}
+
+{% image path: assets/model/migration_create_table.png, description: migration create_table %}
+
+`create_table :books` で booksという名前のテーブルを作ります。DBはテーブルという単位でデータを管理します。このアプリの、本に関するデータを保存するために、booksという名前のテーブルを作っています。テーブル名はモデル名の複数形にするという原則があります。
+
+{% image path: assets/model/migration_column.png, description: migration カラム  %}
+
+booksテーブルはtitleという要素と、memo という要素を持ちます。（この要素のことをDBの用語でカラムといいます。）string はデータの型の1つです。文字列を格納します。text もデータの型の1つで(stringよりも多く)文字列を格納します。
+
+`t.timestamp` は、`created_at`(作成日時)、`updated_at`(更新日時)を記録するカラムを作ります。
+
+DBのテーブルはExcelをイメージすると分かり易いです。
+
+{% image path: assets/model/migration_excel.png, description: booksテーブルのイメージ %}
+
+DBへデータへ格納していくことは、 title, memo といった列があるExcelのシートに1行ずつデータを格納していくイメージです。
+
+ところで、以下の図の下線部に見覚えがありませんか？
+
+{% image path: assets/model/migration_underline.png, description: migration 下線部 %}
+
+実はscaffold で指定していたのはこの部分です。
+
+{% image path: assets/model/migration_scaffold.png, description: migration scaffold との対応 %}
+
+{% image path: assets/model/migration_scaffold_explain.png, description: scaffoldの説明 %}
+
+scaffold で指定していたのはテーブル名とカラム、データの型でした。
+
+ここまでで、scaffoldはDB設計図(migration)を作ることを説明しました
+
+{% image path: assets/model/migration_summary.png, description: scaffold は migration を作る %}
+
+では、migrationから実際にDBを作るにはどうすれば良いでしょうか？
+
+{% image path: assets/model/migration_how_to_make_db.png, description: migrationからDBを作るには？ %}
+
+DB設計図(migration)からDBを作るのが `rake db:migrate` コマンドです。
+
+{% image path: assets/model/migration_rake_db_migrate.png, description: rake db migrate コマンドがmigrationからDBを作る %}
+
+## まとめ
+
+### scaffold で作られる model, migration
+では、scaffoldで作られるmodel, migrationをまとめます。
+
+{% image path: assets/model/summary_scaffold_make_files.png, description: scaffoldコマンドがファイルを作る %}
+
+{% image path: assets/model/summary_rake_db_migrate.png, description: rake db migrate コマンドがDBを作る %}
+
+{% image path: assets/model/summary_model_db.png, description: model と DB でアプリは動く %}
+
+### モデルの使い方
+
+{% image path: assets/model/summary_model1.png, description: モデルの使い方 %}
+
+{% image path: assets/model/summary_model2.png, description: モデルの使い方 つづき %}
+
+## 応用編：既存のDBテーブルにカラムを増やすには？
+
 ★ここから
 
