Finished to write the model page.

--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -271,6 +271,27 @@ rails g migration AddAuthorToBooks author:string
 
 ## 応用編：新しいモデルとmigrationを一緒に作るには？
 
-   
-★ここから
+rails g コマンドにmodelを指定するとmodelとmigrationを生成できます。
 
+{% highlight ruby %}
+rails g model books title:string memo:text
+{% endhighlight %}
+
+{% highlight console %}
+db/migrate/20121208060032_create_books.rb
+app/models/books.rb
+{% endhighlight %}
+
+## 応用編：rails g コマンドまとめ
+
+{% image path: assets/model/rails_g_list.png, description: rails g コマンド一覧表 %}
+
+## 応用編：scaffoldでつくった Migration, Model, Controller へカラムを追加するには？
+
+{% image path: assets/model/add_column_commands.png, description: カラムを追加 コマンド %}
+
+{% image path: assets/model/add_column_view.png, description: カラムを追加 viewを修正 その1 %}
+
+{% image path: assets/model/add_column_view_2.png, description: カラムを追加 viewを修正 その2 %}
+
+{% image path: assets/model/add_column_controller.png, description: カラムを追加 controller %}
