--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -102,37 +102,40 @@ $ rails server
 
 また、ブラウザはお好きなものをご利用いただけますが、途中のデバッグの箇所で [Chrome](https://www.google.co.jp/chrome/browser/) の機能を例にして説明していますので、Chrome の環境を用意しておくと分かり易いかと思います。
 
-### ブラウザだけで開発できるクラウド開発環境 - Nitrous.IO
+### ブラウザだけで開発できるクラウド開発環境 - Cloud9
 
-[Nitorus.IO](https://www.nitrous.io) はブラウザだけでRailsアプリ開発を行うことができます。セットアップはNitrous.IO へ会員登録を行うだけです。有料プランもありますが、開発を行う範囲では無料プランの範囲で利用することができます。
+[Cloud9](https://c9.io) はブラウザだけでRailsアプリ開発を行うことができます。セットアップはCloud9 へ会員登録を行うだけです。有料プランもありますが、開発を行う範囲では無料プランの範囲で利用することができます。
 
 画面は3ペインのIDEになっていて、ファイルエクスプローラ、ファイルエディタ、ターミナルを利用することができます。
 
-ターミナルからはgitコマンドも利用できるので、github でソース管理することも可能です。Ruby は2.1系、Rails は4.1系と最新のものが利用できます。Nitrous.IO については [WebブラウザだけではじめるRuby/Railsプログラミング](http://qiita.com/machu/items/0ecc5699273c18fd1cd8) のページで丁寧に解説されています。
+ターミナルからはgitコマンドも利用できるので、github でソース管理することも可能です。
 
-`rails server` コマンドで起動したWebサーバへのアクセスはローカルに環境を作った場合と異なり、上部メニューにある Preview からPort3000を選ぶことでアクセスが可能です。
-
-注意点としては、Nitrous.IOは無料プランでは一定時間操作がない場合、アプリケーションが停止状態になります。この場合も管理コンソールからボタンを押すことで再起動が可能です。(これによって料金が発生することもありません。)
-
-また、ブラウザにIEを使うと、一部使用できない機能が一部あるようです。ブラウザは Chrome または Firefox をお勧めします。
-
-もしも、Rubyのバージョンを上げたい場合は以下の手順でバージョンアップできます。(rvm を利用しているので、rvmの使い方通りでバージョンアップ可能です。)
+もしも、Rubyのバージョンを上げたい場合は以下の手順でバージョンアップできます。(rvm を利用しているので、rvmの通常の方法でバージョンアップ可能です。)
 
 {% highlight console %}
 $ rvm get stable
-$ rvm install 2.1.2
-$ rvm use global 2.1.2 --default
+$ rvm install 2.2.3
 {% endhighlight %}
+
+インストール後、Railsアプリのルートフォルダへ .ruby-version を作成し、`2.2.3` 具合にRubyのバージョンを書くと、そのアプリではこのファイルで指定したバージョンを使用することができます。
 
 Rails のバージョンを上げたい場合はRailsプロジェクト内の Gemfile 中の `gem 'rails', '4.1.6'` のバージョンを上げて bundle update をするか、gem update rails で環境に入っているrailsをバージョンアップすることができます。
 
-クラウドで開発できるNitrous.IO はマシンを変えても同じ環境で開発でき、ブラウザが使える環境であればどの端末からでも開発できるというメリットがあります。一方でネットに接続していないと開発できないことや、Nitrous.IOがサービスを止めてしまうと継続して使えないというデメリットもあります。
+ローカルでの開発と違うのは、rails server コマンドと、そこへのアクセス方法です。rails server コマンドを実行する際は、以下のように -b, -p オプションを指定する必要があります。
+
+{% highlight console %}
+$ rails server -b $IP -p $PORT
+{% endhighlight %}
+
+また、起動したWebサーバへのアクセスは、ローカルに環境を作った場合と異なり、上部メニューにある Preview - Preview Running Application からアクセスします。
+
+クラウドで開発できるCloud9 はマシンを変えても同じ環境で開発でき、ブラウザが使える環境であればどの端末からでも開発できるというメリットがあります。一方でネットに接続していないと開発できないことや、Cloud9がサービスを止めてしまうと継続して使えないというデメリットもあります。
 
 ### ローカルに開発環境を作る - mac の場合
 
 自分のmac上に開発環境を作る方法です。
 
-開発環境つくりに必要なxcodeツールをインストールします。
+開発環境づくりに必要なxcodeツールをインストールします。
 
 {% highlight console %}
 $ xcode-select --install
@@ -180,7 +183,7 @@ $ gem i rails
 
 Windowsの場合は [RailsInstaller](http://railsinstaller.org) を利用することで簡単に環境を構築することができます。しかし、最近は更新が行われておらず、Ruby1.9.3, Rails3.2 という構成になっています。Railsはコマンドプロンプトから gem update rails で最新版にバージョンアップすることが可能です。しかし、Rubyのバージョンを上げるのは簡単ではありません。
 
-最新バージョンのRubyおよびRailsを利用したい場合は、上記のNitrous.IOの利用をお勧めします。
+最新バージョンのRubyおよびRailsを利用したい場合は、上記のCloud9の利用をお勧めします。
 
 プログラムを入力する道具であるエディタは、好みのものがあればそれを利用してください。特にない場合は [Atom](https://github.com/atom/atom/blob/master/README.md#windows) をお勧めします。Atom は無料で利用することができます。(ライセンスは MIT ライセンスです。)
 
