--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -106,7 +106,7 @@ $ rails server
 
 [Cloud9](https://c9.io) はブラウザだけでRailsアプリ開発を行うことができます。セットアップはCloud9 へ会員登録を行うだけです。有料プランもありますが、開発を行う範囲では無料プランの範囲で利用することができます。
 
-ワークスペースを作成する際に、テンプレートとしてRuby on Rails Tutorialを選ぶと、この資料の範囲が終わったあとで、RaisTutorial を利用することもできるのでお勧めです。画面は3ペインのIDEになっていて、ファイルエクスプローラ、ファイルエディタ、ターミナルを利用することができます。
+ワークスペースを作成する際に、テンプレートとしてRuby on Rails Tutorialを選ぶと、この資料の範囲が終わったあとで、次のステップとなる資料 RaisTutorial を利用することもできるのでお勧めです。画面は3ペインのIDEになっていて、ファイルエクスプローラ、ファイルエディタ、ターミナルを利用することができます。
 
 ターミナルからはgitコマンドも利用できるので、github でソース管理することも可能です。
 
