--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -28,9 +28,11 @@ categories:
 - Webプログラミングは初めてである
 - Railsプログラミングは初めてである
 
-プログラミングは初めての方も安心してください。あなたを歓迎します。ようこそプログラミングの世界へ！本書は2年間の一橋大学社会学部での講義資料をもとに書いています。講義はプログラミングは初経験である学生が多数派でした。学生らがつまづいた箇所について補足をして、資料を加筆していきました。ですから、プログラミングが初めての方に読んでいただけるように、丁寧に説明をしていきます。
+プログラミングは初めての方も安心してください。あなたを歓迎します。ようこそプログラミングの世界へ！本書は筆者が作成した2年間の一橋大学社会学部での講義資料をもとに書いています。講義はプログラミングは初経験である学生が多数派でした。学生らがつまづいた箇所について補足をして、資料を加筆していきました。ですから、プログラミングが初めての方に読んでいただけるように、丁寧に説明をしていきます。
 
-それでも、プログラミングの世界、Webの世界は広大です。本書ではHTML（ブラウザで表示するための言語）とCSS（HTMLと一緒に使う、装飾するための言語）については最低限の説明のみにとどめています。HTMLとCSSについて学びたい方は、たとえば以下の情報が分かり易いです。
+Railsを学ぶための資料として、[RailsGuides](http://railsguides.jp/) や [RailsTutorial](http://railstutorial.jp/) という良い資料があります。本書を読み進めると、これらの資料を読み進めるための基礎知識も身についついていきます。本書で基礎を身につけ、さらに知識を深めるためにこれらの資料を読むことは大きな力になるでしょう。
+
+プログラミングの世界、Webの世界は広大です。本書ではHTML（ブラウザで表示するための言語）とCSS（HTMLと一緒に使う、装飾するための言語）については最低限の説明のみにとどめています。HTMLとCSSについて学びたい方は、たとえば以下の情報が分かり易いです。
 
 - ドットインストール HTML入門
   - http://dotinstall.com/lessons/basic_html_v2
