--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -98,7 +98,7 @@ $ rails server
 
 ## 開発環境
 
-本書はRuby 2.1.2 および Rails 4.1.6 で動作確認をしています。一部、実行結果などで記述の古い部分もあります。執筆時の最新版で動作確認を進めています。
+本書はRuby 2.3.0 および Rails 5.0.0beta1 で動作確認をしています。一部、実行結果などで記述の古い部分もあります。執筆時の最新版で動作確認を進めています。
 
 本書の内容を実行する場合にはRubyおよびRailsの開発環境を作る必要があります。開発環境としては、以下のものがお勧めです。どれか1つを選んで環境を作ってみてください。
 
@@ -116,12 +116,12 @@ $ rails server
 
 {% highlight console %}
 $ rvm get stable
-$ rvm install 2.2.3
+$ rvm install 2.3.0
 {% endhighlight %}
 
-インストール後、Railsアプリのルートフォルダへ .ruby-version を作成し、`2.2.3` といった具合にRubyのバージョンを書くと、そのアプリではこのファイルで指定したバージョンを使用することができます。
+インストール後、Railsアプリのルートフォルダへ .ruby-version を作成し、`2.3.0` といった具合にRubyのバージョンを書くと、そのアプリではこのファイルで指定したバージョンを使用することができます。
 
-Rails のバージョンを上げたい場合はRailsプロジェクト内の Gemfile 中の `gem 'rails', '4.1.6'` のバージョンを上げて bundle update をするか、gem update rails で環境に入っているrailsをバージョンアップすることができます。
+Rails のバージョンを上げたい場合はRailsプロジェクト内の Gemfile 中の `gem 'rails', '5.0.0'` のバージョンを上げて bundle update をするか、gem update rails で環境に入っているrailsをバージョンアップすることができます。
 
 ローカルでの開発と違うのは、rails server コマンドと、そこへのアクセス方法です。rails server コマンドを実行する際は、以下のように -b, -p オプションを指定する必要があります。
 
@@ -162,13 +162,13 @@ $ source ~/.bash_profile
 rbenv を使って Ruby をインストールします。
 
 {% highlight console %}
-$ rbenv install 2.1.2
+$ rbenv install 2.3.0
 {% endhighlight %}
 
 install した Ruby を利用するように設定します。
 
 {% highlight console %}
-$ rbenv global 2.1.2
+$ rbenv global 2.3.0
 {% endhighlight %}
 
 以上でRubyのインストールは完了です。続いて、インストールした Ruby を使って Rails をインストールします。
@@ -183,7 +183,7 @@ $ gem i rails
 
 ### ローカルに開発環境を作る - Windowsの場合
 
-Windowsの場合は [RailsInstaller](http://railsinstaller.org) を利用することで簡単に環境を構築することができます。しかし、最近は更新が行われておらず、Ruby1.9.3, Rails3.2 という構成になっています。Railsはコマンドプロンプトから gem update rails で最新版にバージョンアップすることが可能です。しかし、Rubyのバージョンを上げるのは簡単ではありません。
+Windowsの場合は [RailsInstaller](http://railsinstaller.org) を利用することで簡単に環境を構築することができます。しかし、最近は更新が行われておらず、Ruby2.1.5, Rails4.1 という構成になっています。Railsはコマンドプロンプトから gem update rails で最新版にバージョンアップすることが可能です。しかし、Rubyのバージョンを上げるのは簡単ではありません。
 
 最新バージョンのRubyおよびRailsを利用したい場合は、上記のCloud9の利用をお勧めします。
 
