Add sample code description in preface page.

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -96,6 +96,11 @@ Puma 2.15.3 starting...
 * Listening on tcp://localhost:3000
 {% endhighlight %}
 
+## サンプルコード
+
+本書で使うサンプルコードは以下に置いてあります。
+
+https://github.com/igaiga/rails_textbook_sample
 
 ## 開発環境
 
