remove inappropriate sentence.

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -104,7 +104,7 @@ https://github.com/igaiga/rails_textbook_sample
 
 ## 開発環境
 
-本書はRuby 2.3.0 および Rails 5.0.0beta1 で動作確認をしています。一部、実行結果などで記述の古い部分もあります。執筆時の最新版で動作確認を進めています。
+本書はRuby 2.3.0 および Rails 5.0.0beta1 で動作確認をしています。一部、実行結果などで記述の古い部分もあります。
 
 本書の内容を実行する場合にはRubyおよびRailsの開発環境を作る必要があります。開発環境としては、以下のものがお勧めです。どれか1つを選んで環境を作ってみてください。
 
