--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -100,34 +100,27 @@ Puma 2.15.3 starting...
 
 本書で使うサンプルコードは以下に置いてあります。
 
-https://github.com/igaiga/rails_textbook_sample
+[`https://github.com/igaiga/rails_textbook_sample`](https://github.com/igaiga/rails_textbook_sample)
 
 ## 開発環境
 
-本書はRuby 2.3.0 および Rails 5.0.0beta1 で動作確認をしています。一部、実行結果などで記述の古い部分もあります。
+本書はRuby 2.3.0 および Rails 5.0.0beta1, Rails4.2 で動作確認をしています。
 
-本書の内容を実行する場合にはRubyおよびRailsの開発環境を作る必要があります。開発環境としては、以下のものがお勧めです。どれか1つを選んで環境を作ってみてください。
+※2016年1月現在、Rails5.0.0は正式リリース版がまだ出ていません。ベータリリース版(正式リリースへ向けての準備バージョン)である Rails 5.0.0.beta1 が最新版です。正式リリース版が出る前にベータリリース版Rails5.0.0を使いたい場合は `gem install rails --pre` とインストールコマンドに `--pre` オプションを付けて実行します。また、本書の内容はRails4.2でも同様に実行できますので、Rails4.2を使っても大丈夫です。
 
-また、ブラウザはお好きなものをご利用いただけますが、途中のデバッグの箇所で [Chrome](https://www.google.co.jp/chrome/browser/) の機能を例にして説明していますので、Chrome の環境を用意しておくと分かり易いかと思います。
+本書の内容を実行する場合にはRubyおよびRailsの開発環境を作る必要があります。開発環境として、3つの方法を書きました。どれか1つを選んで環境を作ってみましょう。簡単に開発を始めたい場合はクラウド開発環境をお勧めします。
+
+- ブラウザだけで開発できるクラウド開発環境 - Cloud9
+- ローカルに開発環境を作る - mac の場合
+- ローカルに開発環境を作る - Windowsの場合
+
+また、ブラウザはお好きなものをご利用いただけますが、途中のデバッグの箇所で [Chrome](https://www.google.co.jp/chrome/browser/) の機能を例にして説明していますので、Chrome を使うと分かり易いです。
 
 ### ブラウザだけで開発できるクラウド開発環境 - Cloud9
 
-[Cloud9](https://c9.io) はブラウザだけでRailsアプリ開発を行うことができます。セットアップはCloud9 へ会員登録を行うだけです。有料プランもありますが、開発を行う範囲では無料プランの範囲で利用することができます。
+[Cloud9](https://c9.io) はブラウザだけでRailsアプリ開発を行うことができます。セットアップはCloud9 へ会員登録を行うだけです。有料プランもありますが、本書の内容で開発を行う範囲では無料プランの範囲で利用することができます。
 
-ワークスペースを作成する際に、テンプレートとしてRuby on Rails Tutorialを選ぶと、この資料の範囲が終わったあとで、次のステップとなる資料 RaisTutorial を利用することもできるのでお勧めです。画面は3ペインのIDEになっていて、ファイルエクスプローラ、ファイルエディタ、ターミナルを利用することができます。
-
-ターミナルからはgitコマンドも利用できるので、github でソース管理することも可能です。
-
-もしも、Rubyのバージョンを上げたい場合は以下の手順でバージョンアップできます。(rvm を利用しているので、rvmの通常の方法でバージョンアップ可能です。)
-
-{% highlight console %}
-$ rvm get stable
-$ rvm install 2.3.0
-{% endhighlight %}
-
-インストール後、Railsアプリのルートフォルダへ .ruby-version を作成し、`2.3.0` といった具合にRubyのバージョンを書くと、そのアプリではこのファイルで指定したバージョンを使用することができます。
-
-Rails のバージョンを上げたい場合はRailsプロジェクト内の Gemfile 中の `gem 'rails', '5.0.0'` のバージョンを上げて bundle update をするか、gem update rails で環境に入っているrailsをバージョンアップすることができます。
+ワークスペースを作成する際に、テンプレートとしてRuby on Rails Tutorialを選ぶと、この資料の範囲が終わったあとで、次のステップとなる資料 RaisTutorial を利用することもできるのでお勧めです。画面は3ペインのIDEになっていて、ファイルエクスプローラ、ファイルエディタ、ターミナルを利用することができます。ターミナルからはgitコマンドも利用できるので、github でソース管理することも可能です。
 
 ローカルでの開発と違うのは、rails server コマンドと、そこへのアクセス方法です。rails server コマンドを実行する際は、以下のように -b, -p オプションを指定する必要があります。
 
@@ -138,6 +131,19 @@ $ rails server -b $IP -p $PORT
 また、起動したWebサーバへのアクセスは、ローカルに環境を作った場合と異なり、上部メニューにある Preview - Preview Running Application からアクセスします。
 
 クラウドで開発できるCloud9 はマシンを変えても同じ環境で開発でき、ブラウザが使える環境であればどの端末からでも開発できるというメリットがあります。一方でネットに接続していないと開発できないことや、Cloud9がサービスを止めてしまうと継続して使えないというデメリットもあります。
+
+以下の手順は少し難しい内容になりますので、読み飛ばしても大丈夫です。
+
+RubyとRailsについて、そのままのバージョンで利用していただいても大丈夫ですが、もしも、Rubyのバージョンを上げたい場合は以下の手順でバージョンアップできます。(rvm を利用しているので、rvmでの通常の作法でバージョンアップ可能です。)
+
+{% highlight console %}
+$ rvm get stable
+$ rvm install 2.3.0
+{% endhighlight %}
+
+インストール後、Railsアプリのルートフォルダへ .ruby-version を作成し、`2.3.0` といった具合にRubyのバージョンを書くと、そのアプリではこのファイルで指定したバージョンを使用することができます。
+
+Rails のバージョンを上げたい場合はRailsプロジェクト内の Gemfile 中の `gem 'rails', '5.0.0'` のバージョンを上げて `bundle update` コマンドを実行するか、`gem update rails` コマンドで環境に入っているrailsをバージョンアップすることができます。
 
 ### ローカルに開発環境を作る - mac の場合
 
@@ -180,7 +186,7 @@ $ rbenv global 2.3.0
 以上でRubyのインストールは完了です。続いて、インストールした Ruby を使って Rails をインストールします。
 
 {% highlight console %}
-$ gem i rails
+$ gem install rails
 {% endhighlight %}
 
 ここまでで Ruby と Rails の開発環境構築ができました。
@@ -189,7 +195,9 @@ $ gem i rails
 
 ### ローカルに開発環境を作る - Windowsの場合
 
-Windowsの場合は [RailsInstaller](http://railsinstaller.org) を利用することで簡単に環境を構築することができます。しかし、最近は更新が行われておらず、Ruby2.1.5, Rails4.1 という構成になっています。Railsはコマンドプロンプトから gem update rails で最新版にバージョンアップすることが可能です。しかし、Rubyのバージョンを上げるのは簡単ではありません。
+Windowsの場合は [RailsInstaller](http://railsinstaller.org) を利用することで簡単に環境を構築することができます。インストーラをダウンロードして実行してください。
+
+しかし、最近は更新が行われておらず、Ruby2.1.5, Rails4.1 という構成になっています。Railsはコマンドプロンプトから `gem update rails` コマンドで最新版にバージョンアップすることが可能です。しかし、Rubyのバージョンを上げるのは簡単ではありません。
 
 最新バージョンのRubyおよびRailsを利用したい場合は、上記のCloud9の利用をお勧めします。
 
