Replace rake db:migrate to rails db:migrate

--- a/_posts/2014-07-01-crud.md
+++ b/_posts/2014-07-01-crud.md
@@ -40,10 +40,12 @@ Use `bundle show [gemname]` to see where a bundled gem is installed.
 
 次に、以下のコマンドを実行します。
 
+(※Rails4.2以前では `rails db:migrate` の替わりに `bin/rake db:migrate` と実行してください。)
+
 {% highlight bash %}
 cd books_app
 rails g scaffold book title:string memo:text
-bin/rake db:migrate
+rails db:migrate
 rails s
 {% endhighlight %}
 
@@ -55,7 +57,7 @@ Running via Spring preloader in process 83236
 ...
       invoke  css
       create    app/assets/stylesheets/scaffold.css
-$ bin/rake db:migrate
+$ rails db:migrate
 Running via Spring preloader in process 83289
 == 20151227072352 CreateBooks: migrating ======================================
 -- create_table(:books)
