Replace figures in crud page.

--- a/_posts/2014-07-01-crud.md
+++ b/_posts/2014-07-01-crud.md
@@ -143,11 +143,11 @@ Running via Spring preloader in process 83236
 
 一方、ページの観点から見ると、scaffoldは次に示す新規作成、表示、更新、削除のための4つの画面と、画面のない3つの機能を生成します。
 
-{% image path: assets/crud/crud_4_pages.png, description: 4つの画面 %}
+{% image path: assets/crud/kn/crud_4_pages.png, description: CRUD 4つの画面 %}
 
-それぞれの機能と対応するアクションを示したものが次の図です。※アクションとはコントローラに書いてあるpublicなメソッドのことです。基本的には、1つの画面を表示するとき、1つのアクションが実行されています。アクションについてはまた後で説明します。
+それぞれの機能と対応するアクションを示したものが次の図です。(アクションとはコントローラに書いてあるpublicなメソッドのことです。) 基本的には、1つの画面を表示するとき、1つのアクションが実行されています。アクションについてはまた後で説明します。
 
-{% image path: assets/crud/crud_7_actions.png, description: 7つのアクション %}
+{% image path: assets/crud/kn/crud_7_actions.png, description: CRUD 7つのアクション %}
 
 この中から最初に、indexアクションのページについて見ていきましょう。
 
@@ -155,31 +155,43 @@ Running via Spring preloader in process 83236
 
 最初にindexアクションについて見ていきましょう。さきほどの7つのアクションの図で示されたこの部分です。
 
-{% image path: assets/crud/index_7_actions.png, description: indexアクション %}
+{% image path: assets/crud/kn/index_7_actions.png, description: indexアクション %}
 
 indexアクションで表示されるページ(下の図)は登録されているデータの一覧です。ここでは登録されているBookの一覧表示画面になります。この画面が表示されるまでの処理を追いかけてみましょう。
 
-{% image path: assets/crud/index_view.png, description: index - 一覧画面 %}
+{% image path: assets/crud/kn/index_view.png, description: index - 一覧画面 %}
 
 前にも出てきた「Railsアプリがリクエストを受けてレスポンスを返すまで」をindexアクションの場合で描きなおした図が以下になります。
 
-{% image path: assets/crud/index_flow.png, description: Railsアプリがリクエストを受けてレスポンスを返すまで(indexアクション) %}
+{% image path: assets/crud/kn/index_flow.png, description: Railsアプリがリクエストを受けてレスポンスを返すまで(indexアクション) %}
 
 順番にRoutesから処理を追っていきます。
 
 ### Routes
 
-{% image path: assets/crud/index_flow_routes.png, description: Routes %}
+Routesはリクエストと処理を行うコントローラを決めるための対応表です。
 
-{% image path: assets/crud/index_routes.png, description: Routes 対応表 %}
+{% image path: assets/crud/kn/index_flow_routes.png, description: Routes %}
 
-Routes でリクエストから次に処理するコントローラとアクションが決まります。routes対応表を表示するために、rails server　を起動して、`http://localhost:3000/rails/info/routes`へアクセスしてみましょう。上記の「Routes対応表」図が表示されたroutesです。今回はURLが "/books", HTTPメソッドが "GET" なので、下線部が該当行です。books#index (BooksController の indexアクション) にて処理が行われることが分かります。
+Routes でリクエストから次に処理するコントローラとアクションが決まります。routes対応表を表示するために、rails server　を起動して、`http://localhost:3000/rails/info/routes` へアクセスしてみましょう。
 
-コントローラの処理を見る前に寄り道して、Routesのコードを見てみましょう。Routesのコードは `config/routes.rb` にあります。コードは以下の図に示すようになっています。
+{% image path: assets/crud/kn/index_routes.png, description: Routes 対応表 %}
 
-{% image path: assets/crud/index_routes_codes.png, description: Routes のコード %}
+今回はURLが "/books", HTTPメソッドが "GET" なので、下線部が該当行です。「/books に GET でアクセスされたとき、BooksController の index アクションへ処理を流す」という意味になります。次に進むべきコントローラは books#index (BooksController の indexアクション) となることが分かります。
 
-Routes 対応表を作るコードは `Rails.application.routes.draw do` から `end` の間に書きます。今回表示された8行の対応表は、`resources :books` の1行によって作られます。CRUDは基本的な動作でよく利用されるため、簡単に書けるようになっているのです。
+コントローラの処理を見る前に、Routesのコードを見てみましょう。Routesのコードは `config/routes.rb` にあります。コードは以下の図に示すようになっています。
+
+{% highlight ruby %}
+Rails.application.routes.draw do
+  resources :books
+  # For details on the DSL available within this file, see http://guides.rubyonrails.org/routing.html
+
+  # Serve websocket cable requests in-process
+  # mount ActionCable.server => '/cable'
+end
+{% endhighlight %}
+
+Routes 対応表を作るコードは `Rails.application.routes.draw do` から `end` の間に書きます。#記号ではじまる行は分かりやすさのためのコメントで、動作には影響がありません。 `http://localhost:3000/rails/info/routes`のページで表示された8行の対応表は、`resources :books` の1行によって作られます。CRUDは基本的な動作でよく利用されるため、簡単に書けるようになっているのです。
 
 それでは次の処理、コントローラへ進みましょう。
 
