--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -64,28 +64,28 @@ categories:
 
 ### ruby および rails コードの書式例
 
-{% highlight ruby %}
+```ruby
 puts "Hello world!"
-{% endhighlight %}
+```
 
-{% highlight ruby %}
+```diff
 class HelloController < ApplicationController
   def index
 -   @time = Time.now
 +   @time = 1.day.ago
   end
 end
-{% endhighlight %}
+```
 
 -, + 印が付いている場合はその行について変更を行うことを示します。（-, + がついていない部分はそのままです） - で始まる行を削除し、+ で始まる行を追加してください。
 
 ### ターミナルコマンドの書式例
-{% highlight bash %}
+```bash
 rails server
-{% endhighlight %}
+```
 
 ### ターミナルの実行結果の書式例
-{% highlight console %}
+```console
 $ rails server
 => Booting Puma
 => Rails 5.0.0.beta1 application starting in development on http://localhost:3000
@@ -96,7 +96,7 @@ Puma 2.15.3 starting...
 * Min threads: 0, max threads: 16
 * Environment: development
 * Listening on tcp://localhost:3000
-{% endhighlight %}
+```
 
 ## サンプルコード
 
@@ -126,9 +126,9 @@ Puma 2.15.3 starting...
 
 ローカルでの開発と違うのは、rails server コマンドと、そこへのアクセス方法です。rails server コマンドを実行する際は、以下のように -b, -p オプションを指定する必要があります。
 
-{% highlight console %}
+```console
 $ rails server -b $IP -p $PORT
-{% endhighlight %}
+```
 
 また、起動したWebサーバへのアクセスは、ローカルに環境を作った場合と異なり、上部メニューにある Preview - Preview Running Application からアクセスします。
 
@@ -138,10 +138,10 @@ $ rails server -b $IP -p $PORT
 
 RubyとRailsについて、そのままのバージョンで利用していただいても大丈夫ですが、もしも、Rubyのバージョンを上げたい場合は以下の手順でバージョンアップできます。(rvm を利用しているので、rvmでの通常の作法でバージョンアップ可能です。)
 
-{% highlight console %}
+```console
 $ rvm get stable
 $ rvm install 2.3.0
-{% endhighlight %}
+```
 
 インストール後、Railsアプリのルートフォルダへ .ruby-version を作成し、`2.3.0` といった具合にRubyのバージョンを書くと、そのアプリではこのファイルで指定したバージョンを使用することができます。
 
@@ -153,43 +153,43 @@ Rails のバージョンを上げたい場合はRailsプロジェクト内の Ge
 
 開発環境づくりに必要なxcodeツールをインストールします。
 
-{% highlight console %}
+```console
 $ xcode-select --install
-{% endhighlight %}
+```
 
 homebrew をインストールします。homebrew は mac で様々な便利なものをインストール、管理するためのツールです。
 
-{% highlight console %}
+```console
 $ ruby -e "$(curl -fsSL https://raw.github.com/Homebrew/homebrew/go/install)"
-{% endhighlight %}
+```
 
 homebrew を使って rbenv をインストールします。rbenv はRubyをインストールして管理するための道具です。
 
-{% highlight console %}
+```console
 $ brew update
 $ brew install rbenv ruby-build
 $ echo 'eval "$(rbenv init -)"' >> ~/.bash_profile
 $ echo 'export PATH="$HOME/.rbenv/shims:$PATH"' >> ~/.bash_profile
 $ source ~/.bash_profile
-{% endhighlight %}
+```
 
 rbenv を使って Ruby をインストールします。
 
-{% highlight console %}
+```console
 $ rbenv install 2.3.0
-{% endhighlight %}
+```
 
 install した Ruby を利用するように設定します。
 
-{% highlight console %}
+```console
 $ rbenv global 2.3.0
-{% endhighlight %}
+```
 
 以上でRubyのインストールは完了です。続いて、インストールした Ruby を使って Rails をインストールします。
 
-{% highlight console %}
+```console
 $ gem install rails
-{% endhighlight %}
+```
 
 ここまでで Ruby と Rails の開発環境構築ができました。
 
