Change md style to GFM in gem page

--- a/_posts/2016-01-11-gem.md
+++ b/_posts/2016-01-11-gem.md
@@ -24,26 +24,26 @@ Rubyの世界にもライブラリがあり、Gemと呼ばれます。Gemは [ru
 
 Gem をインストールするには gem install コマンドを利用します。試しに awesome_print というGemをインストールしてみましょう。
 
-{% highlight bash %}
+```bash
 $ gem i awesome_print
-{% endhighlight %}
-{% highlight console %}
+```
+```console
 Successfully installed awesome_print-1.6.1
 1 gem installed
-{% endhighlight %}
+```
 
 gem i の i は install の省略形です。省略せずに gem install と打っても実行することができます。コマンドを実行すると、上記のような表示が出てGemを使えるようになります。Gem名の後ろにハイフンで続く数字はバージョン名です。
 
 インストールした awesome_print は、きれいに表示する ap というメソッドを提供します。irbを起動して試しに使ってみましょう。irbは対話形式でRubyプログラムを実行できる仕組みです。rails console もirb を利用しています。
 
-{% highlight bash %}
+```bash
 $ irb
-{% endhighlight %}
-{% highlight ruby %}
+```
+```ruby
 require "awesome_print"
 ap [1,2,3]
-{% endhighlight %}
-{% highlight console %}
+```
+```console
 $ irb
 > require "awesome_print"
 => true
@@ -54,7 +54,7 @@ $ irb
     [2] 3
 ]
 => nil
-{% endhighlight %}
+```
 
 画面に色付きで配列[1,2,3]が表示されれば成功です。Rubyが標準で持っている p メソッドも同等のことができますが、 ap メソッドの方がきれいに読み易い形で表示してくれます。
 
@@ -70,7 +70,7 @@ BundlerでGem群をインストールするには2つの手順を踏みます。
 
 Railsアプリは最初からBundlerの仕組みを利用するようになっています。GemfileはRailsアプリの場合、Railsのルートフォルダに置いてあります。エディタで開いてみましょう。
 
-{% highlight ruby %}
+```ruby
 source 'https://rubygems.org'
 
 
@@ -79,28 +79,28 @@ gem 'rails', '>= 5.0.0.beta1', '< 5.1'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3'
 ...
-{% endhighlight %}
+```
 
 Railsアプリは最初に作った状態で既に10個以上のgemが登録されています。ここに、さきほどの awesome_print gem を追加してみましょう。書く場所はどこでも良いのですが、`gem 'rails'` の次の行に書いてみます。
 
-{% highlight ruby %}
+```ruby
 gem 'rails', '>= 5.0.0.beta1', '< 5.1'
 + gem 'awesome_print'
-{% endhighlight %}
+```
 
 書いて保存したら、以下のように bundle install コマンドを実行します。ここで `bundle install`と書くことも、また、install を省略して `bundle` と書くこともできます。
 
-{% highlight console %}
+```console
 $ bundle
 Using rake 10.4.2
 ...
 Bundle complete! 13 Gemfile dependencies, 67 gems now installed.
 Use `bundle show [gemname]` to see where a bundled gem is installed.
-{% endhighlight %}
+```
 
 これで awesome_print gem を使う準備は完了です。試しに rails console を起動して、apメソッドを使ってみましょう。
 
-{% highlight console %}
+```console
 $ rails c
 > ap [1,2,3]
 [
@@ -119,7 +119,7 @@ $ rails c
     :updated_at => Sun, 27 Dec 2015 07:27:40 UTC +00:00
 }
 => nil
-{% endhighlight %}
+```
 
 ターミナルに改行されて色がついて読み易く表示されているかと思います。Railsアプリの場合はrequire 文を書かなくても良いようになっているので、require 文を書く必要がありません。(ちなみに、書いても問題ありません。requireを複数実行すると、最初の1回だけが適切に実行されます。)
 
@@ -135,15 +135,15 @@ $ rails c
 
 利用するバージョンを指定したい場合は、Gemfileにバージョンを追記します。RailsアプリのGemfileを見ると、いくつかバージョンが既に指定してあるものがあります。
 
-{% highlight ruby %}
+```ruby
 gem 'uglifier', '>= 1.3.0'
-{% endhighlight %}
+```
 
 これは「uglifierというGemのバージョンは、1.3.0以上」という意味の指定になります。これは数式の意味と同じですね。一方、こんな見慣れないバージョン指定表記があります。
 
-{% highlight ruby %}
+```ruby
 gem 'coffee-rails', '~> 4.1.0'
-{% endhighlight %}
+```
 
  ~> という記号、このケースでは、`>= 4.1.0` かつ `< 4.2` という意味になります。小さいバージョンアップは受け入れて、大きなバージョンアップは受け入れない、という記号です。
 
