--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -18,7 +18,7 @@ categories:
 
 ## データの永続化
 
-コード中で変数に入れたデータは、変数の有効範囲（スコープと言います）が終わると消えてしまいます。以下のコードで説明しましょう。
+コード中で変数に代入したデータは、変数の有効範囲（スコープと言います）が終わると消えてしまいます。以下のコードで説明しましょう。
 
 ```ruby
 def print_hello_world
@@ -27,25 +27,25 @@ def print_hello_world
 end
 ```
 
-変数 x の有効範囲（スコープ）は、そのメソッドの中だけです。（このような変数をローカル変数と呼びます。）この場合、メソッドfooの実行が終わると変数 x と、それが指すオブジェクトは消えてしまいます。
+変数 x の有効範囲（スコープ）は、そのメソッドの中だけです。（このような変数をローカル変数と呼びます。）この場合、メソッド `print_hello_world` の実行が終わると変数 x と、それが指すオブジェクトは消えてしまいます。
 
-別の種類の変数として、前の章でも出てきたインスタンス変数(@はじまりの変数)があります。インスタンス変数は、インスタンスオブジェクトがなくなると一緒に消えます。Railsの場合は、1つのリクエスト内が有効範囲だと考えることができます。(ここではおおまかに、ブラウザでのあるページを1回の表示するのが1回のリクエストだと考えて差し支えありません。ですので、別のページを表示したり、リロードを行ったりすると、また新しい別のリクエストになります。) @book のようにインスタンス変数に入れると、コントローラからビューまで使うことができますが、その後なくなります。
+別の種類の変数として、前の章でも出てきたインスタンス変数(@はじまりの変数)があります。インスタンス変数は、インスタンスオブジェクトがなくなると一緒に消えます。Railsの場合は、1つのリクエスト内が有効範囲だと考えることができます。(ここではおおまかに、ブラウザでのあるページを表示するのが1回のリクエストだと考えて差し支えありません。ですので、別のページを表示したり、リロードを行ったりすると、また新しい別のリクエストになります。) @book のようなインスタンス変数に格納すると、コントローラからビューまで使うことができますが、その後なくなります。
 
-それでも、つくったRailsアプリは別のリクエストでも情報が見れますよね？新規入力画面で自分で入力して登録したデータが、ブラウザから何回アクセスしても表示されます。
+それでも、つくったRailsアプリは別のリクエストでも情報が見れますよね？新規入力画面で自分で入力して一度登録してしまえば、その後ブラウザから何回アクセスしても、たとえば一覧画面で何回リロードしても表示されます。
 
 つまり、複数のリクエストに渡ってデータが保存されていることが分かります。これはインスタンス変数では実現できません。データがずっと残っているのは「データを保存する」仕事をしている「何かの仕組み」があるからなのです。
 
 その仕組みがこの章の主役 モデル(Model) です。
 
-![モデル](assets/model/overview.png)
+![モデル](assets/model/kn/overview.png)
 
 この章はモデルについて説明します。また、この章でCRUDのcreateの部分を題材に説明します。(前の章の続きになります。)
 
-![この章の題材](assets/model/crud-create.png)
+![この章の題材](assets/model/kn/crud-create.png)
 
 コードはこの部分です。
 
-![BooksController create アクション](assets/model/create-overview.png)
+![BooksController create アクション](assets/model/kn/create-overview.png)
 
 モデルに関する部分はここです。
 
