Writing model page

--- a/_posts/2014-07-01-crud.md
+++ b/_posts/2014-07-01-crud.md
@@ -50,7 +50,7 @@ rails s
 {% endhighlight %}
 
 {% highlight console %}
-$ rails g scaffold books title:string memo:text
+$ rails g scaffold book title:string memo:text
 Running via Spring preloader in process 83236
       invoke  active_record
       create    db/migrate/20151227072352_create_books.rb
