--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -231,17 +231,17 @@ DB設計図(migration)からDBを作るのが `rails db:migrate` コマンドで
 ### scaffold で作られる model, migration
 では、scaffoldで作られるmodel, migrationをまとめます。
 
-![scaffoldコマンドがファイルを作る](assets/model/summary_scaffold_make_files.png)
+![scaffoldコマンドがファイルを作る](assets/model/kn/summary_scaffold_make_files.png)
 
-![rails db migrate コマンドがDBを作る](assets/model/summary_rake_db_migrate.png)
+![rails db migrate コマンドがDBを作る](assets/model/kn/summary_rake_db_migrate.png)
 
-![model と DB でアプリは動く](assets/model/summary_model_db.png)
+![model と DB でアプリは動く](assets/model/kn/summary_model_db.png)
 
 ### モデルの使い方
 
-![モデルの使い方](assets/model/summary_model1.png)
+![モデルの使い方](assets/model/kn/summary_model1.png)
 
-![モデルの使い方 つづき](assets/model/summary_model2.png)
+![モデルの使い方 つづき](assets/model/kn/summary_model2.png)
 
 ## さらに学びたい場合は
 
@@ -272,13 +272,54 @@ rails g コマンドにmigrationを指定するとmigrationファイルだけを
 rails g migration AddAuthorToBooks author:string
 ```
 
-実行結果と追加の説明は以下の図を参照して下さい。
+```console
+$ rails g migration AddAuthorToBooks author:string
+      invoke  active_record
+      create    db/migrate/20160215230716_add_author_to_books.rb
+```
 
-![既存のDBテーブル(Model)にカラムを増やすには？](assets/model/migration_new_column.png)
+rails g migrationコマンドの基本形は以下になります。
 
-![booksテーブルにstring型のauthorを加えるmigration](assets/model/migration_new_column_author.png)
+$ rails g migration Addカラム名Toテーブル名 カラム名:型名
 
-![generateしても、0から書いても良い](assets/model/migration_generate_or_write.png)
+作成されたmigrationファイルは以下のようになっています。
+
+```
+20160215230716_add_author_to_books.rb
+```
+
+```ruby
+class AddAuthorToBooks < ActiveRecord::Migration[5.0]
+  def change
+    add_column :books, :author, :string
+  end
+end
+```
+
+生成されたmigrationファイルには、booksテーブルへauthorカラムをstring型で追加する指示が書かれています。
+
+migrationファイルを作成したら、`rails db:migrate` コマンドでDBへ内容を反映します。
+
+```bash
+$ rails db:migrate
+```
+
+```console
+== 20160215230716 AddAuthorToBooks: migrating =================================
+-- add_column(:books, :author, :string)
+   -> 0.0039s
+== 20160215230716 AddAuthorToBooks: migrated (0.0040s) ========================
+```
+
+これで、DBのbooksテーブルへauthorカラムが追加されました。
+
+ここまでの作業をまとめると、以下のようになります。
+
+![booksテーブルにstring型のauthorを加えるmigration](assets/model/kn/migration_new_column_author.png)
+
+ちなみに、ちなみに、Railsのgenerate機能は開発をアシストする機能なので、使わないで0から手でコードを書いても同様に動きます。rails g を使ってファイルを作っても、0から手でコードを書いても同じ結果になります。以下の図を参考にしてください。
+
+![generateしても、0から書いても良い](assets/model/kn/migration_generate_or_write.png)
 
 ## 応用編：新しいモデルとmigrationを一緒に作るには？
 
@@ -289,20 +330,193 @@ rails g model books title:string memo:text
 ```
 
 ```console
-db/migrate/20121208060032_create_books.rb
+db/migrate/20160216060032_create_books.rb
 app/models/books.rb
 ```
 
 ## 応用編：rails g コマンドまとめ
 
-![rails g コマンド一覧表](assets/model/rails_g_list.png)
+rails g コマンドの一覧をまとめます。
+
+migration
+
+```bash
+$ rails g migration AddAuthorToBooks author:string
+```
+
+model + migration
+
+```bash
+$ rails g model book title:string memo:text
+```
+
+routes + controller + view
+
+```bash
+$ rails g controller books index
+```
+
+scaffold = model + migration + routes + controller + view
+
+```bash
+$ rails g scaffold book title:string memo:text
+```
 
 ## 応用編：scaffoldでつくった Migration, Model, Controller へカラムを追加するには？
 
-![カラムを追加 コマンド](assets/model/add_column_commands.png)
+既にあるbooksテーブルにstring型のauthorを加えて、ブラウザから入力できるようにしてみましょう。
 
-![カラムを追加 viewを修正 その1](assets/model/add_column_view.png)
+### booksテーブルにstring型のauthorを加える
 
-![カラムを追加 viewを修正 その2](assets/model/add_column_view_2.png)
+```bash
+$ rails g migration AddAuthorToBooks author:string
+```
+```console
+$ rails g migration AddAuthorToBooks author:string
+      invoke  active_record
+      create    db/migrate/20160215230716_add_author_to_books.rb
+```
 
-![カラムを追加 controller](assets/model/add_column_controller.png)
+作成されたファイルは以下のようになっています。
+
+`db/migrate/20160215230716_add_author_to_books.rb`
+
+```ruby
+class AddAuthorToBooks < ActiveRecord::Migration[5.0]
+  def change
+    add_column :books, :author, :string
+  end
+end
+```
+
+### migrationからDBを作る
+
+```bash
+$ rails db:migrate
+```
+
+```console
+== 20160215230716 AddAuthorToBooks: migrating =================================
+-- add_column(:books, :author, :string)
+   -> 0.0039s
+== 20160215230716 AddAuthorToBooks: migrated (0.0040s) ========================
+```
+
+### viewを修正
+
+フォームパーシャル
+
+`app/views/books/_form.html.erb`
+
+```diff
+<%= form_for(book) do |f| %>
+...
+  <div class="field">
+    <%= f.label :title %>
+    <%= f.text_field :title %>
+  </div>
+
+  <div class="field">
+    <%= f.label :memo %>
+    <%= f.text_area :memo %>
+  </div>
+
++  <div class="field">
++    <%= f.label :author %><br>
++    <%= f.text_field :author %>
++  </div>
+
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
+```
+
+詳細表示画面
+
+`app/views/books/show.html.erb`
+
+```diff
+<p id="notice"><%= notice %></p>
+
+<p>
+  <strong>Title:</strong>
+  <%= @book.title %>
+</p>
+
+<p>
+  <strong>Memo:</strong>
+  <%= @book.memo %>
+</p>
+
++<p>
++  <strong>Author:</strong>
++  <%= @book.author %>
++</p>
+
+<%= link_to 'Edit', edit_book_path(@book) %> |
+<%= link_to 'Back', books_path %>
+```
+
+一覧表示画面
+
+`app/views/books/index.html.erb`
+
+```diff
+<p id="notice"><%= notice %></p>
+
+<h1>Books</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Memo</th>
++      <th>Author</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @books.each do |book| %>
+      <tr>
+        <td><%= book.title %></td>
+        <td><%= book.memo %></td>
++        <td><%= book.author %></td>
+        <td><%= link_to 'Show', book %></td>
+        <td><%= link_to 'Edit', edit_book_path(book) %></td>
+        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'New Book', new_book_path %>
+```
+
+### controller を修正
+
+`app/controllers/books_controller.rb`
+
+```diff
+class BooksController < ApplicationController
+...
+    # Never trust parameters from the scary internet, only allow the white list through.
+    def book_params
+-      params.require(:book).permit(:title, :memo)
++      params.require(:book).permit(:title, :memo, :author)
+    end
+end
+```
+
+### 動作確認
+
+![新規入力画面](assets/model/add_author_new.png)
+
+![詳細画面](assets/model/add_author_show.png)
+
+![一覧画面](assets/model/add_author_index.png)
+
+各画面にAuthor欄が追加されて、登録できるようになりました。
