--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -28,9 +28,9 @@ categories:
 - Webプログラミングは初めてである
 - Railsプログラミングは初めてである
 
-プログラミングは初めての方も安心してください。プログラミングの世界へようこそ！本書は筆者が作成した2年間の一橋大学社会学部での講義資料をもとに書いています。講義はプログラミングは初経験である学生が多数派でした。学生さんたちがつまづいた箇所について補足をして、資料を加筆していきました。ですから、プログラミングが初めての方に読んでいただけるように、丁寧に説明をしていきます。
+プログラミングは初めての方も安心してください。プログラミングの世界へようこそ！本書は筆者が作成した2年間の一橋大学社会学部での講義資料をもとに書いています。講義はプログラミングは初経験である学生が多数派でした。学生さんたちがつまづいた箇所について補足をして、資料を加筆していきました。プログラミングが初めての方に読んでいただけるように、丁寧に説明をしていきます。
 
-本書の目的の1つは写真や文書を投稿できるミニブログアプリづくりを通じて、Railsアプリを実際に作って動かして、その仕組みを学ぶことです。できるだけ簡単なサンプルアプリを用意し、その仕組みを説明することで、RailsおよびWebアプリの基礎を説明していきます。
+本書の目的の1つは写真や文書を投稿できるミニブログアプリを題材に、Railsアプリを実際に作って動かし、その仕組みを学ぶことです。できるだけ簡単なサンプルアプリを用意し、その仕組みを説明することで、RailsおよびWebアプリの基礎を説明していきます。
 
 また、本書の目的のもう1つは、世の中にあるたくさんの情報を読むための基礎知識を身につけることです。Railsを学ぶための良い資料として、[RailsGuides](http://railsguides.jp/) や [RailsTutorial](http://railstutorial.jp/) があります。本書を読み進めると、これらの資料を読み進めるための基礎知識が身についてきます。実践的なRailsアプリを作るために、これらの資料は大きな助けになるでしょう。
 
@@ -50,13 +50,13 @@ categories:
   - 著: 清水 亮
   - ISBN: 978-4-12-150489-0
 
-もしもあなたが他の言語でプログラミングをした経験があれば、これも大きなアドバンテージです。特にjavascriptの経験がある方は、本書の知識をつかってインタラクティブで格好良いWebアプリを作ることができるようになるでしょう。Rubyistの方は、本書の内容を越えた範囲について、いままでの知識をつかって高速に成長することができるでしょう。
+もしもあなたが他の言語でプログラミングをした経験があれば、これも大きなアドバンテージです。特にjavascriptの経験がある方は、本書の知識をつかってインタラクティブで格好良いWebアプリを作ることができるようになるでしょう。Rubyistの方は、本書の内容を越えた範囲について、いままでの知識をつかって早く成長することができるでしょう。
 
 逆に、本書の対象から外れるのは以下のような方です。
 
 - Railsの基礎はわかっている
 
-本書はRailsの入門的な本やサイトを読んで難しいと感じた方に、そこまでの知識を埋められるように書いています。逆にいえば、ほかの入門書を読める力があれば、本書は易しすぎると感じるかもしれません。具体的には、[RailsTutorial](http://railstutorial.jp/) を読み進められるようであれば、本書から得られるものは少ないかもしれません。その場合でも、デバッグの方法などの情報は活用できるかと思います。
+本書はRailsの入門的な本やサイトを読んで難しいと感じた方に、そこまでの知識を埋められるように書いています。逆に言えば、ほかの入門書を読める力があれば、本書は易しすぎると感じるかもしれません。具体的には、[RailsTutorial](http://railstutorial.jp/) を読み進められるようであれば、本書から得られるものは少ないかもしれません。
 
 ## 書式例
 
@@ -67,6 +67,7 @@ categories:
 ```ruby
 puts "Hello world!"
 ```
+### 差分がある場合の書式例
 
 ```diff
 class HelloController < ApplicationController
@@ -108,7 +109,7 @@ Puma 2.15.3 starting...
 
 本書はRuby 2.3.0 および Rails 5.0.0beta1, Rails4.2 で動作確認をしています。
 
-※2016年1月現在、Rails5.0.0は正式リリース版がまだ出ていません。ベータリリース版(正式リリースへ向けての準備バージョン)である Rails 5.0.0.beta1 が最新版です。正式リリース版が出る前にベータリリース版Rails5.0.0を使いたい場合は `gem install rails --pre` とインストールコマンドに `--pre` オプションを付けて実行します。また、本書の内容はRails4.2でも同様に実行できますので、Rails4.2を使っても大丈夫です。
+※2016年2月現在、Rails5.0.0は正式リリース版がまだ出ていません。ベータリリース版(正式リリースへ向けての準備バージョン)である Rails 5.0.0.beta1 が最新版です。正式リリース版が出る前にベータリリース版Rails5.0.0を使いたい場合は `gem install rails --pre` とインストールコマンドに `--pre` オプションを付けて実行します。また、本書の内容はRails4.2でも同様に実行できますので、Rails4.2をお使いいただいても大丈夫です。
 
 本書の内容を実行する場合にはRubyおよびRailsの開発環境を作る必要があります。開発環境として、3つの方法を書きました。どれか1つを選んで環境を作ってみましょう。簡単に開発を始めたい場合はクラウド開発環境をお勧めします。
 
@@ -199,59 +200,10 @@ $ gem install rails
 
 Windowsの場合は [RailsInstaller](http://railsinstaller.org) を利用することで簡単に環境を構築することができます。インストーラをダウンロードして実行してください。
 
-しかし、最近は更新が行われておらず、Ruby2.1.5, Rails4.1 という構成になっています。Railsはコマンドプロンプトから `gem update rails` コマンドで最新版にバージョンアップすることが可能です。しかし、Rubyのバージョンを上げるのは簡単ではありません。
-
-最新バージョンのRubyおよびRailsを利用したい場合は、上記のCloud9の利用をお勧めします。
+※2016年2月現在の最新パッケージは、Ruby2.2.4, Rails4.2 という構成になっています。Railsはコマンドプロンプトから `gem update rails` コマンドで最新版にバージョンアップすることが可能です。しかし、Rubyのバージョンを上げるのは簡単ではないので、パッケージに入っているRubyをそのまま使うのが良いでしょう。最新バージョンのRubyおよびRailsを利用したい場合は、上記のCloud9の利用をお勧めします。
 
 プログラムを入力する道具であるエディタは、好みのものがあればそれを利用してください。特にない場合は [Atom](https://github.com/atom/atom/blob/master/README.md#windows) をお勧めします。Atom は無料で利用することができます。(ライセンスは MIT ライセンスです。)
 
-## 本書を終えたあとに
+---
 
-（※本来、これは後書きに書くべき内容ですが、現在この資料は執筆中であり後書きはまだ存在ないためこちらに書きます。）
-
-### Rails を学ぶ資料
-
-本書をやり終えると、Railsの基礎の仕組みを理解し、簡単なアプリを作れるようになり、アプリを作る上でのデバッグ作業ができるようになります。
-
-さらにRailsの理解を深めたい方には、以下の資料や書籍をお薦めします。
-
-- Ruby on Rails Guides
-  - [http://guides.rubyonrails.org/](http://guides.rubyonrails.org/)
-  - [電子書籍版](http://tatsu-zine.com/books/railsguides)
-
-Railsの各機能を網羅的に解説しているサイトです。Railsの機能の使い方が分からないときに最初にあたるサイトでもあります。調べ物で使うのも良いですが、一度通読しておくとどのような機能があるかを把握できてその後の進みが速いです。常に最新のRailsについての記述が書いてあるサイトでもあります。
-
-- Ruby on Rails チュートリアル
-  - [http://railstutorial.jp/](http://railstutorial.jp/)
-  - [電子書籍版](http://tatsu-zine.com/books/railstutorial)
-
-Railsアプリを作りながら学ぶWeb上の資料です。Railsを使う企業での新人研修によく用いられています。若干難しめですが、他の言語を習熟している方、他のWebフレームワークを使ったことがある方は入りやすいかもしれません。
-
-- 改訂3版基礎 Ruby on Rails
-  - ISBN: 978-4844338154
-
-Railsの入門書です。基礎的な内容を丁寧に説明しています。サンプルアプリつくりを通してRailsの各機能を説明していきます。Rails4.2準拠。
-
-- パーフェクト Ruby on Rails
-  - ISBN: 978-4774165165
-
-Railsの基礎から応用まで網羅した書籍です。実際にRailsでプロダクトを作っている著者陣がそのノウハウを踏まえて体系的にRailsを解説しています。サンプルアプリを手を動かして作ることができるのも良いところです。初級者から中級者へのステップアップに。筆者が務めている会社ではこの本で読書会をしました。名著です。Rails4.1準拠。
-
-また、RailsはRubyというプログラミング言語で作られています。Rubyの知識を学ぶことで、より内容を理解し、自分が書く内容を豊かにできます。
-
-### Ruby を学ぶ資料
-
-- Rubyの教科書
-  - [`https://github.com/igaiga/hitotsubashi-ruby-2013`](https://github.com/igaiga/hitotsubashi-ruby-2013)
-
-拙著の教科書、Ruby版です。本書の内容の前に半年間、Rubyのコースを行い、その際の資料です。プログラミングが初めての方々へ読んでいただけるように書いています。第3回から第14回がRubyの内容です。2013年の資料なので若干記述が古くなっています。（最新版に書き直したいところです。希望がある方は私までリクエストして焚きつけてもらえると嬉しいです。）
-
-- たのしいRuby
-  - ISBN: 978-4797386295
-
-Rubyの教科書といえばこの本、という名著です。分かり易く、丁寧に、かつ網羅的にRubyの説明をしています。最新の第五版が2016年2月に発売予定です。
-
-### Rubyのコミュニティ
-
-なにより、自分で作りたいアプリを作ってみるのが一番勉強になります。作っている上で、もしもつまづき、インターネットで検索しても分からないことがあったときには、近くのRubyコミュニティの集まりへぜひ足を運んでみてください。新しいRubyist（あなたのことです！）を温かく迎えてくれるはずです。Rubyコミュニティは「都市名.rb」という名前で活動していることが多いです。また、[RubyKaigi](http://rubykaigi.org/)や[地方Ruby会議](http://regional.rubykaigi.org/)と呼ばれるカンファレンスも定期的に開催されています。
-
+それでは、次の章から早速Railsアプリづくりを始めましょう！
